bubble-animation/application-mainfest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1                                                                                                                                                         
kind: HTTPRoute                                                                  
metadata:                                                                        
  name: bubble-animation-httproute
  namespace: poc-ns
spec:                                                                            
  parentRefs:                                                                    
  - group: gateway.networking.k8s.io                                             
    kind: Gateway                                                                
    name: traefik-gateway                                                        
    namespace: traefik-v2                                                        
  rules:                                                                         
  - backendRefs:                                                                 
    - group: ""                                                                  
      kind: Service                                                              
      name: bubble-animation-svc                                                        
      namespace: poc-ns                                                        
      port: 8080                                                                 
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    matches:                                                                     
    - path:                                                           
      type: PathPrefix
      value: /bubble-app
